test/data/semantic-errors/werdArithmatic.derp
werd x = "1" derp
werd y = "2" derp
pront x + y derp